Configuração para rodar dev em /madoc e funcionar dentro do madoc-editor

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -15,7 +15,7 @@
     <body style="background-color: white;">
         <app-root>
             <p id="appAjaxLoader" style="text-align: center;">
-                <img src="/assets/img/ajax-loader.gif" />
+                <img src="assets/img/ajax-loader.gif" />
             </p>
             <div
                 id="appErrorMessage"
