--- a/ui/src/testeapi.html
+++ b/ui/src/testeapi.html
@@ -1,47 +1,60 @@
 <!DOCTYPE html>
 <html lang='pt-br'>
-<head>
-  <base href=".">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"/>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="description" content=""/>
-  <meta name="keywords" content=""/>
-  <meta name="author" content=""/>
-  <meta name="Copyright" content=""/>
-  <meta name="google-site-verification" content=""/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
-  <meta name="robots" content="index, follow"/>
 
-  <title>Madoc - Teste da API</title>
+  <head>
+    <base href=".">
+    <meta http-equiv="X-UA-Compatible"
+          content="IE=Edge,chrome=1" />
+    <meta http-equiv="Content-Type"
+          content="text/html; charset=UTF-8" />
+    <meta name="description"
+          content="" />
+    <meta name="keywords"
+          content="" />
+    <meta name="author"
+          content="" />
+    <meta name="Copyright"
+          content="" />
+    <meta name="google-site-verification"
+          content="" />
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, user-scalable=yes" />
+    <meta name="robots"
+          content="index, follow" />
 
-  <script type="text/javascript" src="assets/js/api.js"></script>
+    <title>Madoc - Teste da API</title>
 
-  <script>
+    <script type="text/javascript"
+            src="assets/js/api.js"></script>
 
-  var baseUrl = window.location.href.replace(/[^/]+\.html.*$/, '');
+    <script>
 
-  var params = {
-    tipoDocumento: 'Requerimento',
-    nomeDocumento: 'Aqui vai o nome do documento',
-    urlSalvar: baseUrl + '/exemplo-integracao/salvar',
-    urlAbrir: baseUrl + '/exemplo-integracao/abrir',
-    targetDocument: document,
-    callbackFechar: function(salvou) { if(salvou) console.log('Documento salvo!'); }
-  };
+      var baseUrl = window.location.href.replace(/[^/]+\.html.*$/, '');
 
-  </script>
+      var params = {
+        tipoDocumento: 'Requerimento',
+        nomeDocumento: 'Aqui vai o nome do documento',
+        urlSalvar: baseUrl + '/exemplo-integracao/salvar',
+        urlAbrir: baseUrl + '/exemplo-integracao/abrir',
+        targetDocument: document,
+        urlCSS: 'assets/css/testecss.css',
+        callbackFechar: function (salvou) { if (salvou) console.log('Documento salvo!'); }
+      };
 
-</head>
+    </script>
 
-<body style="text-align: center; padding-top: 50px;">
+  </head>
 
-<p>
-  <a href="javascript:madoc.novo(params)">Novo</a>
-</p>
+  <body style="text-align: center; padding-top: 50px;">
 
-<p>
-  <a href="javascript:madoc.abrir(params)">Abrir</a>
-</p>
+    <p>
+      <a href="javascript:madoc.novo(params)">Novo</a>
+    </p>
 
-</body>
+    <p>
+      <a href="javascript:madoc.abrir(params)">Abrir</a>
+    </p>
+
+  </body>
+
 </html>
