#113723 Documenta parâmetro do CSS customizado e melhor css de exemplo.

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -24,7 +24,7 @@
     </head>
 
     <body style="background-color: white;">
-        <app-root>
+        <app-root id="madoc-editor">
             <p id="appAjaxLoader"
                style="text-align: center;">
                 <img src="assets/img/ajax-loader.gif" />
